--- a/style.css
+++ b/style.css
@@ -4,4 +4,12 @@
     box-sizing: border-box;
 }
 
-
+.tudo{
+    padding-left: 30px;
+}
+.sob{
+    padding-left: 300px;
+}
+.senha{
+    padding-top: 10px;
+}
